--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,40 @@
+body {
+  background: #1b1b1b;
+  color: #fff;
+  font-family: "Arial", monospace;
+  width: 1000px;
+  margin: auto;
+  font-weight: 300;
+}
+
 .App {
+  text-align: left;
+}
+
+.App-logo, .App h1, .App h4 {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App-logo img{
+  height: 3.9em;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h2 {
+  font-weight: bold;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+a {
+  color: #00bcd4;
 }
 
-.App-link {
-  color: #61dafb;
+pre {
+  white-space: pre-wrap;
+  font-size: 14px;
+  line-height: 22px;
+  border-left: 2px solid darksalmon;
+  background: #291d18;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+p {
+  line-height: 22px;
 }
